--- a/.github/workflows/validate_pr.yml
+++ b/.github/workflows/validate_pr.yml
@@ -1,9 +1,9 @@
-name: validate-pr
+name: Validate Pull Request
+
+permissions:
+  pull-requests: write
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     types:
       - opened
@@ -12,11 +12,11 @@ on:
       - synchronize
 
 jobs:
-    validate-pr:
-    runs-on: ubuntu-latest
+  validate-pr:
+    runs-on: self-hosted
     steps:
       - name: Pull Request Title is Conventional
-          id: lint_pr_title
+        id: lint_pr_title
         uses: amannn/action-semantic-pull-request@e32d7e603df1aa1ba07e981f2a23455dee596825
         with:
           # Recommended Prefixes from https://github.com/conventional-changelog/commitlint/blob/master/%40commitlint/config-conventional/README.md#type-enum
