fix: Got rid of `app` in source

--- a/.github/workflows/push_to_aws_ec2.yml
+++ b/.github/workflows/push_to_aws_ec2.yml
@@ -15,7 +15,7 @@ jobs:
         uses: easingthemes/ssh-deploy@v2.1.5
         env:
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          SOURCE: "./app"
+          SOURCE: "./"
           REMOTE_HOST: "ec2-54-185-220-29.us-west-2.compute.amazonaws.com"
           REMOTE_USER: "ec2-user"
           TARGET: "/var/www/html"
