--- a/.github/workflows/validate_pr.yml
+++ b/.github/workflows/validate_pr.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   validate-pr:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Pull Request Title is Conventional
         id: lint_pr_title
