--- a/.github/workflows/push_to_aws_ec2.yml
+++ b/.github/workflows/push_to_aws_ec2.yml
@@ -14,8 +14,13 @@ jobs:
       - name: Deploy to EC2 instance
         uses: easingthemes/ssh-deploy@v2.1.5
         env:
+          ARGS: 
+            --exclude='.gitignore'
+            --exclude='.github/'
+            --exclude='.github/workflows/'
+            --exclude='README.md'
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          SOURCE: "./app"
+          SOURCE: "./"
           REMOTE_HOST: "ec2-54-185-220-29.us-west-2.compute.amazonaws.com"
           REMOTE_USER: "ec2-user"
           TARGET: "/var/www/html"
