--- a/.github/workflows/push_to_aws_ec2.yml
+++ b/.github/workflows/push_to_aws_ec2.yml
@@ -20,6 +20,6 @@ jobs:
             --exclude='README.md'
           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
           SOURCE: "./"
-          REMOTE_HOST: "ec2-54-185-220-29.us-west-2.compute.amazonaws.com"
-          REMOTE_USER: "ec2-user"
+          REMOTE_HOST: ${{ secrets.EC2_HOST }}
+          REMOTE_USER: ${{ secrets.EC2_USER }}
           TARGET: "/var/www/html"
