--- a/.github/workflows/push_to_aws_ec2.yml
+++ b/.github/workflows/push_to_aws_ec2.yml
@@ -26,3 +26,14 @@ jobs:
           REMOTE_HOST: ${{ secrets.EC2_HOST }}
           REMOTE_USER: ${{ secrets.EC2_USER }}
           TARGET: "/var/www/html"
+
+      - name: Build Vue Project
+        uses: appleboy/ssh-action@master
+        with:
+            host: ${{ secrets.EC2_HOST }}
+            username: ${{ secrets.EC2_USER}}
+            key: ${{ secrets.EC2_SSH_KEY }}
+            script: |
+                  cd /var/www/html/vue-project
+                  sudo npm install
+                  sudo npm run build
