--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.31.0"
+  },
+  "dependencies": {
+    "vuetify": "^3.7.4"
   }
 }
